Flash notice Z-index fixed

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -244,6 +244,7 @@ ol.carousel-indicators li.active {
   border-radius: 15px;
   text-align: center;
   color: black;
+  z-index: 10;
 } 
 
 /*--for -login & sign up & edit user--*/
